fix margins on small screens

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -10,6 +10,7 @@ code, pre {
   border-radius: 1vh;
   font-family: $monospace;
   font-size: 2.2vh;
+  width: 88vw;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
